[package]
name = "ord-tool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoin = "0.29.2"
serde = "1"
serde_json = "1"
jsonrpsee-client-transport = { version = "0.18", fearures = ["ws"] }
jsonrpsee-http-client = "0.18"
jsonrpsee-core = "0.18"
tokio = {version = "1.28", features = ["macros"]}
anyhow = "1"
bitcoincore-rpc = "0.17.0"

[dependencies.ord]
#git = "https://github.com/hxuchen/ord.git"
#branch = "test"
path = "../ord"